Correct errors in assignment

--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -58,11 +58,7 @@
    "id": "774b9e35-4ca4-49ff-bd4b-e5d30e4df291",
    "metadata": {},
    "source": [
-    "Below are a few examples of evaluating arithmetic expressions in Python.\n",
-    "\n",
-    "1 + 1\n",
-    "5 / 2\n",
-    "5 // 2"
+    "### Below are a few examples of evaluating arithmetic expressions in Python."
    ]
   },
   {
